# quickview

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  flake.nix
i18n/en/: quickview.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  core.rs  i18n.rs  main.rs
src/app/: context_page.rs  header.rs  nav.rs  pages.rs  view_page.rs
src/app/context_page/: about.rs
src/app/pages/: contexts.rs  views.rs
src/app/pages/contexts/: about.rs
src/app/pages/views/: config.rs  home.rs
src/app/view_page/: config.rs  home.rs
src/core/: config.rs  i18n.rs  settings.rs
