[package]
name = "quickview"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A libcosmic frontend for quickemu"
repository = "https://github.com/debarchito/quickview"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xdg = "2.5.2"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "a11y",
    "dbus-config",
    "multi-window",
    "single-instance",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
]
